--- a/adaptive.css
+++ b/adaptive.css
@@ -167,12 +167,17 @@
   }
   .main-title__button{
     font-size: 17px;
-    width: 35%;
+    width: 25%;
+    margin-left: 60px;
 
   }
   .text{
     font-size: 20px;
      margin-left: 60px;
+    margin-right: 60px;
+  }
+  .advanced_position {
+    margin-left: 60px;
     margin-right: 60px;
   }
   .advanced_position_white{
@@ -199,21 +204,65 @@
 .fas{
   font-size: 40px;
 }
+.subtitle_about {
+    margin-left: 60px;
+    margin-right: 60px;
+}
 .subtitle-about{
   font-size: 20px;
+  margin-left: 60px;
+  margin-right: 60px;
 }
 .slides__text{
   font-size: 20px;
+}
+.subtitle-about-table{
+  margin-left: 0;
+  margin-right: 0;
+}
+.about-links {
+    margin-left: 60px;
+}
+.subtitle-about-features{
+    margin-left: 60px;
+  margin-right: 60px;
+}
+.email{
+  margin-left: 60px;
+
+}
+.main-title__button{
+  margin-right: 60px;
+  margin-left: 0px;
 }
 }
 @media (min-width:768px){
   .main-title{
     display:flex;
+    background-color: #fafafa;
+
+  }
+  .main-title__button {
+   
+    margin-left: 30px;
+}
+  .title{
+    margin-left: 30px;
+    margin-right: 0px;
+  }
+  .text{
+    margin-left: 30px;
+    margin-right: 30px;
   }
   .image-main{
     display: flex;
     align-items: center;
+    width: 65%;
   }
+  .column-text-first-parag {
+    width: 35%;
+   
+}
   .main-title__button{
     width: 140px;
   }
@@ -225,23 +274,28 @@
   }
   .subtitle_title{
     display: block;
+    background-color: white;
   }
   .main-title{
-    padding-left: 10px;
-    padding-right: 10px;
+       padding-left: 0px;
+    padding-right:0px;
+    margin-top: 0;
   }
   .advanced_position{
-    margin-right: 0;
-    width: 45%;
+    margin-right: 23px;
+    width: 44%;
     height: auto;
+    margin-left: 20px;
+    margin-right: 20px;
   }
   .all-main-advanced{
     display: flex;
     width: 100%;
     flex-wrap: wrap;
+    padding: 0 20px;
   }
   .advanced_position-width{
-    width: 100%;
+    width: 93%;
     margin-top: 0px;
     height: auto;
   }
