--- a/mobile.css
+++ b/mobile.css
@@ -112,8 +112,8 @@ body {
 /*End Burger*/
 .main-title {
   margin-top: 50px;
-  padding-left: 10px;
-  margin-right: 10px;
+  padding: 10px 10px;
+ 
 }
 .title {
   display: block;
@@ -137,7 +137,7 @@ body {
 }
 .main-title__button {
   margin-left: 0px;
-  height: 50px;
+  height: 55px;
   width: 45%;
   text-transform: uppercase;
   color: white;
@@ -171,9 +171,9 @@ body {
 .subtitle-text,
 .subtitle-about {
   color: gray;
-  margin-left: 10px;
+  padding: 0 10px;
   line-height: 1.6;
-  margin-right: 10px;
+
 }
 .about-links {
   text-decoration: none;
@@ -458,3 +458,6 @@ body {
 .empty-contair {
   height: 70px;
 }
+
+
+/* FIX SLIDER */
